Include missing fields in Mapper